[gd_scene load_steps=4 format=3 uid="uid://dkwt0dqr8adl1"]

[ext_resource type="Script" path="res://game_menu.gd" id="1_rl2lj"]
[ext_resource type="Texture2D" uid="uid://dyu2gdgcfwrb4" path="res://menuBackground.png" id="2_wrt33"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_115rd"]

[node name="gameMenu" type="Control"]
visible = false
material = SubResource("ShaderMaterial_115rd")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rl2lj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -133.5
offset_right = 212.0
offset_bottom = 133.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ReturnToGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Powrót do gry"

[node name="GameSettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Ustawienia"

[node name="ExitToTheMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Wyjdź do menu"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -167.0
offset_right = 212.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
layout_mode = 2

[node name="HMusicContainer" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Settings/MarginContainer/VBoxContainer/HMusicContainer"]
layout_mode = 2
text = "Muzyka"

[node name="MusicButton" type="CheckButton" parent="Settings/MarginContainer/VBoxContainer/HMusicContainer"]
layout_mode = 2
size_flags_horizontal = 10
button_pressed = true

[node name="MusicSlider" type="HSlider" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 5.0
step = 0.05

[node name="HFullScreenContainer" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FullScreenLabel" type="Label" parent="Settings/MarginContainer/VBoxContainer/HFullScreenContainer"]
layout_mode = 2
text = "Pełny ekran"

[node name="FullScreenButton" type="CheckButton" parent="Settings/MarginContainer/VBoxContainer/HFullScreenContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="ReturnButton" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -81.0
offset_right = 68.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Powrót"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_wrt33")
expand_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnToGameButton" to="." method="_on_return_to_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameSettingsButton" to="." method="_on_game_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitToTheMenuButton" to="." method="_on_exit_to_the_menu_button_pressed"]
[connection signal="toggled" from="Settings/MarginContainer/VBoxContainer/HMusicContainer/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="value_changed" from="Settings/MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="Settings/MarginContainer/VBoxContainer/HFullScreenContainer/FullScreenButton" to="." method="_on_full_screen_button_toggled"]
[connection signal="pressed" from="Settings/ReturnButton" to="." method="_on_return_button_pressed"]
